# css_selector_checker

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
css_selector_checker/: locator.py
