# pyproject.toml
[project]
name = "css_selector_checker"
version = "1.0.0"
description = "CSS selector finder from web page."
authors = [
  { name="mhabibrasool", email="mhabibrasool@gmail.com" }
]
dependencies = [
  "playwright==1.53.0",
]
requires-python = ">=3.9"

[build_system]
requires=["setuptools", "wheel"]

build-backend="setuptools.build_meta"
